fix: add DotNetEnv for .env file support, rename env-example, remove hardcoded config

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,14 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=hamco_dev;Username=art;Password="
+    "DefaultConnection": ""
   },
   "Jwt": {
-    "Secret": "CHANGE_ME_SUPER_SECRET_KEY_32_CHARS_MIN",
-    "Issuer": "tribalwars-clone",
-    "Audience": "tribalwars-clone-client",
+    "Secret": "",
+    "Issuer": "",
+    "Audience": "",
     "ExpiresMinutes": 120
   },
-  "ClientUrl": "http://localhost:5173",
+  "ClientUrl": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
