--- a/api/railway.toml
+++ b/api/railway.toml
@@ -1,7 +1,9 @@
 [build]
 builder = "DOCKERFILE"
+dockerfilePath = "api/Dockerfile"
 
 [deploy]
 startCommand = "dotnet api.dll"
+healthcheckPath = "/swagger"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
