fix: match Hamco pattern - remove railway.json, use intermediate item group for wildcards, add AssemblyName/RootNamespace/PreserveCompilationContext

--- a/App.csproj
+++ b/App.csproj
@@ -8,10 +8,14 @@
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
+    <AssemblyName>App</AssemblyName>
+    <RootNamespace>BrowserGame.Api</RootNamespace>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="api/**/*.cs" Exclude="api/**/bin/**;api/**/obj/**" />
+    <ApiSourceFiles Include="api/**/*.cs" Exclude="api/**/bin/**;api/**/obj/**" />
+    <Compile Include="@(ApiSourceFiles)" />
   </ItemGroup>
   
   <ItemGroup>
