--- a/App.csproj
+++ b/App.csproj
@@ -7,20 +7,25 @@
     <OutputType>Exe</OutputType>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
+    <InterceptorsNamespaces>$(InterceptorsNamespaces);Microsoft.AspNetCore.OpenApi.Generated</InterceptorsNamespaces>
     <AssemblyName>App</AssemblyName>
     <RootNamespace>BrowserGame.Api</RootNamespace>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
+  <!-- Include all source files from all projects -->
   <ItemGroup>
-    <Compile Include="src/**/*.cs" Exclude="src/**/bin/**;src/**/obj/**" />
+    <Compile Include="src/**/*.cs" Exclude="src/**/obj/**;src/**/bin/**" />
   </ItemGroup>
 
+  <!-- Include config files -->
   <ItemGroup>
     <Content Include="src/BrowserGame.Api/appsettings*.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
+  <!-- All package references -->
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
