chore: update .gitignore to exclude Windows-style backslash paths

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,14 @@ client/dist/
 # .NET
 **/bin/
 **/obj/
+**/bin\\*/
+**/obj\\*/
 *.binlog
+# Windows-style paths that break builds
+**/bin\\Debug/
+**/bin\\Release/
+**/obj\\Debug/
+**/obj\\Release/
 
 # Env
 .env
