fix: simplify connection string - use PG* env vars same way in dev and Railway

--- a/src/BrowserGame.Api/appsettings.json
+++ b/src/BrowserGame.Api/appsettings.json
@@ -1,14 +1,14 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Host=${PGHOST};Port=${PGPORT};Database=${PGDATABASE};Username=${PGUSER};Password=${PGPASSWORD}"
   },
   "Jwt": {
-    "Secret": "",
-    "Issuer": "",
-    "Audience": "",
+    "Secret": "${JWT_SECRET}",
+    "Issuer": "tribalwars-clone",
+    "Audience": "tribalwars-clone-client",
     "ExpiresMinutes": 120
   },
-  "ClientUrl": "",
+  "ClientUrl": "http://localhost:5173",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
