--- a/src/BrowserGame.Api/appsettings.Development.json
+++ b/src/BrowserGame.Api/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=railway;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Secret": "dev-secret-key-must-be-at-least-32-characters-long"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
