--- a/App.csproj
+++ b/App.csproj
@@ -25,6 +25,15 @@
     </Content>
   </ItemGroup>
 
+  <!-- Include client build files -->
+  <ItemGroup>
+    <None Include="client/dist/**/*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>client/dist/%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <PublishItemType>Content</PublishItemType>
+    </None>
+  </ItemGroup>
+
   <!-- All package references -->
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
